--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "RNFirebaseStarter",
-  "displayName": "RNFirebaseStarter"
+  "name": "RealtimeChat",
+  "displayName": "RealtimeChat"
 }
