--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "react": "^16.3.1",
     "react-native": "^0.55.3",
     "react-native-firebase": "^4.0.7"
+    "react-native-router-flux": "^4.0.0-beta.28"
   }
 }
