--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "fbjs": "^0.8.16",
     "lodash": "^4.17.10",
+    "promise-queue": "^2.2.5",
     "react": "^16.3.1",
     "react-native": "^0.55.3",
     "react-native-firebase": "^4.0.7"
