--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "promise-queue": "^2.2.5",
     "react": "^16.3.1",
     "react-native": "^0.55.3",
-    "react-native-firebase": "^4.0.7"
+    "react-native-firebase": "^4.0.7",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-router-flux": "^4.0.0-beta.28"
   }
 }
