--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native": "^0.55.3",
     "react-native-firebase": "^4.0.7",
     "react-native-gifted-chat": "^0.4.3",
-    "react-native-router-flux": "^4.0.0-beta.28"
+    "react-native-paper": "^1.7.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-vector-icons": "^4.6.0"
   }
 }
