--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "fbjs": "^0.8.16",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.2",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "promise-queue": "^2.2.5",
