--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ buck-out/
 #
 .expo/
 /ios/Pods/
-google-services.json
-GoogleService-Info.plist
+**/android/app/google-services.json
+**/ios/GoogleService-Info.plist
